# api/oas_parameters_gen.go
@@ -1,44 +1,0 @@
-// Code generated by ogen, DO NOT EDIT.
-
-package api
-
-// R2ShiftsGetParams is parameters of GET /2/shifts operation.
-type R2ShiftsGetParams struct {
-	// The user id to filter by.
-	UserID OptInt
-	// The start of the filter range.
-	Start OptDateTime
-	// The end of the filter range.
-	End OptString
-	// Whether or not to include unpublished shifts. Requires supervisor rights.
-	Unpublished OptBool
-	// Whether or not to include open shifts from the user's assigned Schedules.
-	IncludeOpen OptBool
-	// Whether or not to include only open shifts from the user's assigned Schedules.
-	IncludeOnlyopen OptBool
-	// Whether or to include open shifts across All Schedules. Requires "Manager or Admin access" level.
-	IncludeAllopen OptBool
-	// Whether to include a list of shift IDs ("deleted_ids") that were deleted during the passed time
-	// window.
-	Deleted OptBool
-	// Whether or not to include swap requests.
-	IncludeSwaps OptBool
-	// Maximum number of results to return.
-	Limit OptInt
-	// Whether to include data from all locations. Shifts are marked as "readonly" if not a manager user.
-	AllLocations OptBool
-	// One or more location IDs by which to limit results.
-	LocationID OptString
-	// True to sort results by user_id, false to sort by shift time. Missing for default sort.
-	ShiftSort OptBool
-	// End date to include repeating shifts in series, if applicable.
-	IncludeRepeatingShiftsTo OptDateTime
-	// Setting to true will work w/ the Allow Partial Openshifts feature to display trimmed start/end
-	// times for
-	// users that can take a conflicting openshift based on the account settings.
-	TrimOpenshifts OptBool
-	// Setting to true will work w/ the Scheduling Rules feature to only return OpenShifts that the
-	// requester is eligible for
-	// according to the scheduling rules settings for the account.
-	LimitByRules OptBool
-}
